--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-  max-width: 1300px;
+  max-width: 1248px;
   min-height: 100vh;
   margin: 0 auto;
 }
@@ -24,7 +24,41 @@ h2 {
   font-weight: 300;
 }
 
-.hp-characters {
+.header {
+  text-align: center;
+  border: 1px solid black;
+  box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.3);
+  margin: 20px;
+}
+
+li {
+  display: inline-block;
+  padding: 10px;
+}
+
+li a {
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+li a:hover {
+  color: #444444;
+  border-style: none solid solid none;
+  box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.3);
+}
+
+.active {
+  color: #444444;
+  border-style: none solid solid none;
+  box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.3);
+}
+
+.hp-characters,
+.character {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -35,15 +69,33 @@ a:link {
 }
 
 .character-image,
-.characters {
+.img,
+.characters,
+.characterInfo {
   border: 1px solid black;
   box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.3);
+}
+
+.img {
+  width: 300px;
+  height: 400px;
+  object-fit: cover;
+  margin: 5px;
 }
 
 .character-image {
   width: 200px;
   height: 300px;
   object-fit: cover;
+}
+
+.characterInfo {
+  color: black;
+  text-align: center;
+  padding: 10px;
+  margin: 0px auto;
+  width: 400px;
+  background-color: rgba(179, 179, 179, 0.534);
 }
 
 .characters {
@@ -55,12 +107,93 @@ a:link {
   background-color: rgba(179, 179, 179, 0.534);
 }
 
+form {
+  text-align: center;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid black;
+  background-color: rgba(179, 179, 179, 0.534);
+  box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.3);
+}
+
+input {
+  width: 90%;
+  margin: 5px;
+  padding: 10px;
+  background-color: rgba(179, 179, 179, 0.534);
+  border: 1px solid black;
+}
+
+button {
+  text-align: center;
+  color: black;
+  background-color: #03617294;
+  border: 1px solid black;
+  border-radius: 30px;
+  padding: 15px;
+  margin: 10px;
+  width: 150px;
+  font-size: 17px;
+}
+
+button:hover {
+  color: #024e5c;
+  border: 1px solid #024e5c;
+  background-color: rgba(179, 179, 179, 0.534);
+  box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.3);
+}
+
+label {
+  display: block;
+  margin-top: 5px;
+  text-align: center;
+}
+
 .error {
   text-align: center;
   padding: 10px;
   width: 400px;
   color: rgb(116, 8, 8);
   background-color: rgba(148, 5, 5, 0.171);
-  border: 1px solid rgb(236, 2, 2);
-  box-shadow: 2px 2px 4px 0 rgba(87, 0, 0, 0.3);
+  border: 1px solid rgb(116, 8, 8);
+  box-shadow: 2px 2px 4px 0 rgba(105, 1, 1, 0.363);
+  border-radius: 10px;
+}
+
+.form-error {
+  display: none;
+  color: rgb(180, 4, 4);
+  margin-top: 2px;
+  margin-bottom: 12px;
+}
+
+.message {
+  background: rgba(1, 161, 1, 0.459);
+  border: 1px solid rgb(0, 126, 27);
+  box-shadow: 2px 2px 4px 0 rgba(32, 87, 0, 0.3);
+  text-align: center;
+  padding: 15px;
+  color: rgb(0, 73, 6);
+  border-radius: 10px;
+  margin: 5px 100px 15px 100px;
+}
+
+.loader {
+  margin: auto;
+  border: 15px solid rgba(138, 138, 138, 0.534);
+  box-shadow: 2px 2px 4px 0 rgba(126, 134, 1, 0.644);
+  border-radius: 50%;
+  border-top: 15px solid #03617269;
+  width: 150px;
+  height: 150px;
+  animation: spinner 4s linear infinite;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
